Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-799
regex doesn't work on array elements by position
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.3.5
Affects Version/s:
1.3.4
Component/s:
Querying
Labels:
None
Environment:
osx x86_64
Field Tab
Aha! Info
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Description
Queries like this don't seem to work:
> db.blogposts.find(
{ "comments.0.by" : /A+/ }
)
Attachments
Activity
People
Assignee:
Eliot Horowitz (Inactive)
Reporter:
Joshua Krall
Participants:
auto
,
Eliot Horowitz
,
Joshua Krall
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
Mar 20 2010 04:24:15 AM UTC
Updated:
Jul 12 2016 12:28:53 AM UTC
Resolved:
Mar 22 2010 01:36:41 PM UTC
PagerDuty