fix a.0.x for regex SERVER-799